Revert "CB-5332 fix multiple termination trigger"
This reverts commit 0e512e93db337d2f5a2494b566240a3d2c51d030.